# bt

./: .gitignore  README.md  client_player_fixed.py  demo_ui.py  game_master_gui.py  protocol.py  pyproject.toml  run_lan.ps1  run_tournament.py  shared_simple.py  simulate_game.py
app/: auth.py  engine.py  main.py  state.py
app/routes/: admin.py  play.py
game/: README.md  run_lan.ps1  run_lan.sh  server_full_visibility.py
game/app/: config.py  engine.py  main.py  views.py  ws.py
game/app/routes/: play.py
game/static/admin/: admin.css  admin.js  index.html
game/static/play/: index.html  play.js
game/static/shared/: ships.js  theme.css
game/tests/: conftest.py  test_abilities.py  test_flow.py  test_play_auth.py  test_process_turn.py
midonly/: main.py  pyproject.toml
midonly/templates/: index.html
static/admin/: admin.js  index.html
static/play/: index.html  play.css  play.js
static/shared/: theme.css
tests/: test_flow.py  test_gm_and_history.py  test_protocol.py  test_ship.py
tools/: README.md  _bootstrap.py  client_player_fixed.py  demo_ui.py  game_master_gui.py  run_tournament.py  simulate_game.py  ui_theme.py
