[project]
name = "midonly-gg"
version = "1.0.0"
description = "MidOnly 1x1 - Dota 2 lobby matchmaking platform"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "jinja2>=3.1",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"
